[workspace]
members = ["probe", "hub", "common"]
resolver = "2"

[profile.release]
opt-level = "z"
lto = true
panic = "abort"


# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
