[package]
name = "hub"
version = "0.1.0"
edition = "2021"

[lib]
name = "hub_lib"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "hub"
path = "src/main.rs"

[dependencies]
leptos = { version = "0.8.0" }
leptos_router = { version = "0.8.0" }
leptos_meta = { version = "0.8.0" }

axum = { version = "0.8.0", optional = true, features = ["macros"] }
async-trait = { version = "0.1", optional = true }
tokio = { version = "1", features = ["rt-multi-thread"], optional = true }
leptos_axum = { version = "0.8.0", optional = true }

console_error_panic_hook = { version = "0.1", optional = true }
wasm-bindgen = { version = "0.2.106", optional = true }
gloo-net = { version = "0.6", features = ["http"], optional = true }
web-sys = { version = "0.3", features = [
    "Window",
    "Location",
    "Storage",
    "Document",
    "Element",
    "HtmlInputElement",
], optional = true }

common = { path = "../common" }
anyhow = "1.0.100"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
thiserror = "1"
toml = { version = "0.9", optional = true }

# Crypto / security (SSR only)
ed25519-dalek = { version = "2.2", features = ["rand_core"], optional = true }
chacha20poly1305 = { version = "0.10", optional = true }
hex = { version = "0.4", optional = true }
rand = { version = "0.8", optional = true }
x25519-dalek = { version = "2.0", features = [
    "static_secrets",
], optional = true }

# Database (SSR only)
chrono = { version = "0.4", features = ["serde"], optional = true }
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "macros",
    "chrono",
], optional = true }

# Hot Reload: File watching (SSR only)
notify = { version = "6.1", default-features = false, features = ["macos_fsevent"], optional = true }

# TLS/HTTPS support (SSR only)
rcgen = { version = "0.13", features = ["pem"], optional = true }
rustls = { version = "0.23", optional = true }
rustls-pemfile = { version = "2.1", optional = true }
tokio-rustls = { version = "0.26", optional = true }
axum-server = { version = "0.7", features = ["tls-rustls"], optional = true }
sha2 = { version = "0.10", optional = true }
time = { version = "0.3", optional = true }

# Email/SMTP (SSR only)
lettre = { version = "0.11", features = ["smtp-transport", "builder"], optional = true }

[features]
hydrate = [
    "leptos/hydrate",
    "dep:console_error_panic_hook",
    "dep:wasm-bindgen",
    "dep:gloo-net",
    "dep:web-sys",
]

ssr = [
    "dep:axum",
    "dep:tokio",
    "dep:leptos_axum",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "dep:chrono",
    "dep:sqlx",
    "dep:ed25519-dalek",
    "dep:chacha20poly1305",
    "dep:hex",
    "dep:rand",
    "dep:x25519-dalek",
    "dep:toml",
    "dep:async-trait",
    "dep:notify",
    "dep:rcgen",
    "dep:rustls",
    "dep:rustls-pemfile",
    "dep:tokio-rustls",
    "dep:axum-server",
    "dep:sha2",
    "dep:time",
    "dep:lettre",
]

[package.metadata.leptos]
name = "blentinel_hub"
site-root = "target/site"
site-pkg-dir = "pkg"
style-file = "style/main.scss"
assets-dir = "public"
site-addr = "127.0.0.1:3000"
reload-port = 3001
end2end-cmd = "npx playwright test"
end2end-dir = "end2end"
browserquery = "defaults"
bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
lib-profile-release = "wasm-release"
